--- a/wp-content/themes/plcsystems/style.css
+++ b/wp-content/themes/plcsystems/style.css
@@ -9,6 +9,7 @@ Version: 1.1
 
 /* =Reset CSS (v2.0)
 -------------------------------------------------------------- */
+@import url("/wp-content/themes/plcsystems/css/font.css");
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	border: 0;
@@ -20,19 +21,19 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 body{
 	  background: #fff;
-    font-family: Helvetica, arial, sans-serif;
+    font-family: 'proxima-nova', Helvetica, arial, sans-serif;
 }
 /*===========FONT STYLES============*/
 a {
   color: #0072ff;
   text-decoration: none;
-  font-family: Helvetica, arial, sans-serif;
+  font-family: 'proxima-nova', Helvetica, arial, sans-serif;
 }
 a:hover{
   color: #7f1232;
 }
 p, li{
-  font-family: Helvetica, arial, sans-serif;
+  font-family: 'proxima-nova', Helvetica, arial, sans-serif;
   font-size: 14px;
   color: #8f8f8f;
   line-height: 36px;
@@ -40,19 +41,19 @@ p, li{
 h1{
 	font-size: 36px;
 	color: #009798;
-	font-family: Helvetica, arial, sans-serif;
+	font-family: 'proxima-nova', Helvetica, arial, sans-serif;
 }
 h2{
   font-size: 23px;
   color: #009798;
-  font-family: Helvetica, arial, sans-serif;
+  font-family: 'proxima-nova', Helvetica, arial, sans-serif;
   font-weight: normal;
   text-transform: uppercase;
 }
 h3{
   font-size: 18px;
   color: #009798;
-  font-family: Helvetica, arial, sans-serif;
+  font-family: 'proxima-nova', Helvetica, arial, sans-serif;
   font-weight: bold;
 }
 
