--- a/wp-content/themes/plcsystems/style.css
+++ b/wp-content/themes/plcsystems/style.css
@@ -9,7 +9,7 @@ Version: 1.1
 
 /* =Reset CSS (v2.0)
 -------------------------------------------------------------- */
-@import url("/wp-content/themes/plcsystems/css/font.css");
+@import url("css/font.css");
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	border: 0;
@@ -56,7 +56,14 @@ h3{
   font-family: 'proxima-nova', Helvetica, arial, sans-serif;
   font-weight: bold;
 }
-
+a.about-link-button {
+    background: url(images/about-home-button.png);
+    width: 118px;
+    height: 45px;
+    display: inline-block;
+    line-height: 45px;
+    color: transparent;
+}
 
 /*============HEADER============*/
 div#logo {
@@ -167,7 +174,7 @@ p.date {
 footer#footer {
   background-color: #333333;
   min-height: 90px;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 #footer p{
   color: #ffffff;
