- modified footer background - added content area background - added class "home-content" on front-page.php file - added template for internal page template - added template for projects single post - uploaded background images

--- a/wp-content/themes/plcsystems/style.css
+++ b/wp-content/themes/plcsystems/style.css
@@ -89,6 +89,11 @@ div#logo {
   background-size: 100% auto;
 }
 /*=========HOMEPAGE========*/
+
+.home-content{
+	background: transparent !important;
+}
+
 .main-banner .ls-layer.ls-animating img {
   width: 100%;
   max-width: 100%;
@@ -164,15 +169,23 @@ p.date {
     margin-bottom: 20px;
 }
 .content-area {
-    margin: 30px auto;
+    margin: 30px auto 0 auto;
 }
 .fullwidth article.post h1 {
     text-align: center;
     margin-bottom: 15px;
 }
+
+/*=========INTERNAL PAGES========*/
+#main-content{
+	background: url('images/content-bg_02.png') no-repeat top center;
+	background-size: cover;
+}
+
 /*=========FOOTER========*/
 footer#footer {
-  background-color: #333333;
+  background: url('images/footer-bg_02.png') no-repeat top center;
+  background-size: 100%;
   min-height: 90px;
   margin-bottom: 0px;
 }
