--- a/wp-content/themes/plcsystems/style.css
+++ b/wp-content/themes/plcsystems/style.css
@@ -22,6 +22,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 body{
 	  background: #fff;
     font-family: 'proxima-nova', Helvetica, arial, sans-serif;
+	color: #8f8f8f;
 }
 /*===========FONT STYLES============*/
 a {
@@ -31,10 +32,12 @@ a {
 }
 a:hover{
   color: #7f1232;
+  transition: all 0.5s ease;
+  text-decoration: none;
 }
 p, li{
   font-family: 'proxima-nova', Helvetica, arial, sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   color: #8f8f8f;
   line-height: 36px;
 }
@@ -82,16 +85,34 @@ div#logo {
   color: #8f8f8f;
   line-height: normal;
   text-transform: uppercase;
+  font-size: 14px;
 }
 .nav>li>a:hover {
   color: #fff;
   background: url('images/menu-hover-bg.jpg');
   background-size: 100% auto;
+  -moz-box-shadow: 2px 3px 0px 1px #cfcfcf;
+  -webkit-box-shadow: 2px 3px 0px 1px #cfcfcf;
+  box-shadow: 2px 3px 0px 1px #cfcfcf;
 }
+
+.nav .current-menu-item a{
+  color: #fff;
+  background: url('images/menu-hover-bg.jpg');
+  background-size: 100% auto;
+  -moz-box-shadow: 2px 3px 0px 1px #cfcfcf;
+  -webkit-box-shadow: 2px 3px 0px 1px #cfcfcf;
+  box-shadow: 2px 3px 0px 1px #cfcfcf;
+}
+
 /*=========HOMEPAGE========*/
 
 .home-content{
 	background: transparent !important;
+}
+
+.main-banner{
+	margin-top: 50px;
 }
 
 .main-banner .ls-layer.ls-animating img {
@@ -102,23 +123,56 @@ div#logo {
   width: 100%;
   padding: 0px;
 }
-.home-tagline .container{
-  background: url(images/bottom-latest-bg.jpg);
-  max-width: 1140px;
-  height: 196px;
-  display: table;
-  margin: 45px auto;
+
+.main-banner .ls-bottom-nav-wrapper{
+	position: absolute;
+    bottom: 15%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 }
+
+.main-banner .ls-bottom-nav-wrapper a{
+	background-image: none !important;
+	width: 18px !important;
+	height: 18px !important;
+	border: 1px solid #FFF !important;
+	border-radius: 50px;
+	margin-right: 7px;
+}
+
+.main-banner .ls-bottom-nav-wrapper a.ls-nav-active, .main-banner .ls-bottom-nav-wrapper a:hover{
+	background: #FFF !important;
+	transition: all 0.5s ease !important;
+}
+
+.main-banner .ls-bottom-nav-wrapper .ls-nav-sides.ls-nav-sideleft, .main-banner .ls-bottom-nav-wrapper .ls-nav-sides.ls-nav-sideright{
+	display: none;
+}
+
+.home-tagline{
+  background: url(images/bottom-latest-bg.jpg) no-repeat;
+  background-size: cover;
+  width: 100%;
+  max-width: 100%;
+  margin: 45px auto 0;
+  padding: 4em 0;
+}
+
 .home-tagline .container p {
   font-size: 23px;
   color: #fff;
   text-align: center;
-  vertical-align: middle;
-  display: table-cell;
 }
+
+.home-tagline .container{
+	padding-left: 250px;
+	padding-right: 250px;
+}
+
 .about-company-text {
   text-align: center;
-  margin-top: 85px;
+  margin-top: 100px;
   margin-bottom: 30px;
 }
 .about-button{
@@ -134,17 +188,19 @@ div#logo {
   height: auto;
   margin-left: -50px;
 }
-.latest-news .container > .row {
-  max-width: 95%;
-  float: right;
-}
 p.date {
   color: #0072ff;
   font-size: 14px;
 }
 .latest-news {
-  background-color: #dddddd;
+  background-color: #FFF;
   padding: 35px 0 60px;
+}
+
+.latest-news .container {
+  background-color: #dddddd;
+  padding: 35px 5em 60px;
+  border-radius: 30px;
 }
 .blog .latest-image {
   padding-left: 0px;
@@ -176,6 +232,24 @@ p.date {
     margin-bottom: 15px;
 }
 
+.about-description a{
+	font-size: 18px;
+	text-transform: uppercase;
+	color: #FFF;
+	display: inline-block;
+	text-decoration:none;
+	padding: 0 0.5em;
+	border-radius: 4px;
+	margin-top: 1em;
+	background: url('images/desc-a-bg_03.jpg') repeat-x transparent;
+}
+
+p.date{
+	color: #009798;
+	font-size: 14px;
+	margin-top: 20px;
+}
+
 /*=========INTERNAL PAGES========*/
 #main-content{
 	background: url('images/content-bg_02.png') no-repeat top center;
@@ -183,12 +257,18 @@ p.date {
 }
 
 /*=========FOOTER========*/
+
 footer#footer {
   background: url('images/footer-bg_02.png') no-repeat top center;
   background-size: 100%;
   min-height: 90px;
   margin-bottom: 0px;
 }
+
+.home-footer footer#footer{
+	background: #333333 !important;
+}
+
 #footer p{
   color: #ffffff;
   font-size: 14px;
