--- a/wp-content/themes/plcsystems/style.css
+++ b/wp-content/themes/plcsystems/style.css
@@ -243,7 +243,54 @@ p.date{
 	background: url('images/content-bg_02.png') no-repeat top center;
 	background-size: cover;
 }
+.page-ajax h1{
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 23px;
+  margin-bottom: 15px;
+}
+.page-ajax{
+  padding-bottom: 150px;
+}
+.ajax-trigger{
+  background: url('images/linksbackground.png') no-repeat top left;
+  padding-left: 202px;
+  margin-left: 30px;
+  padding-top: 57px;
+}
+.ajax-link-wrapper {
+    height: 150px;
+    background: url('images/linksborder.png') repeat-x;
+    position: relative;
+}
+a.post-link.left {
+    font-size: 18px;
+    color: #fff;
+    display: inline-block;
+    position: relative;
+    padding-bottom: 40px;
+    background: url('images/mission-button.png') no-repeat bottom center;
+    width: 65px;
+    text-align: center;
+    left: 70px;
+    top: -43px;
 
+}
+a.post-link.right {
+    display: inline-block;
+    position: absolute;
+    background: url('images/mission-button.png') no-repeat bottom center;
+    width: 40px;
+    height: 34px;
+    text-align: center;
+    right: 0px;
+    top: -16px;
+
+}
+.ajax-trigger-inner {
+    max-width: 355px;
+    width: 100%;
+}
 /*=========FOOTER========*/
 
 footer#footer {
