- new database.sql - added slider on project feeds individual pages

--- a/wp-content/themes/plcsystems/style.css
+++ b/wp-content/themes/plcsystems/style.css
@@ -274,6 +274,7 @@ p.date {
 }
 .content-area {
     margin: 30px auto 0 auto;
+	padding-bottom: 2em;
 }
 .fullwidth article.post h1 {
     text-align: center;
