--- a/wp-content/themes/plcsystems/style.css
+++ b/wp-content/themes/plcsystems/style.css
@@ -366,7 +366,7 @@ a.post-link:hover, a.post-link:active {
 	background: url('images/feed-area-bg.png') no-repeat center top;
 	background-size: cover;
 	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-bottom: 35px;
 }
 
 .projects-feed-area .feed-header{
@@ -383,7 +383,7 @@ a.post-link:hover, a.post-link:active {
 }
 
 .projects-feed-area .sliding-area {
-    padding-left: 65px;
+    padding-left: 10px;
     padding-right: 0;
     margin-top: 45px;
 }
@@ -448,6 +448,13 @@ footer#footer {
 }
 #footer a{
   line-height: 90px;
+}
+.site-created p {
+    font-size: 12px;
+    color: #333333;
+}
+.site-created a {
+    color: #007878;
 }
 .social-media{
   text-align: right;
